--- a/manucapture-image-lib/ManucaptureImageLib.csproj
+++ b/manucapture-image-lib/ManucaptureImageLib.csproj
@@ -117,7 +117,8 @@
     <Compile Include="classes\Point.cs" />
     <Compile Include="classes\Polygon.cs" />
     <Compile Include="classes\Shape.cs" />
-    <Compile Include="ImageLib.cs" />
+    <Compile Include="IShapeDetectorBuilder.cs" />
+    <Compile Include="ShapeDetectorBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tools\Canny.cs" />
