--- a/manucapture-image-lib/ManucaptureImageLib.csproj
+++ b/manucapture-image-lib/ManucaptureImageLib.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AFF771EE-FAAA-4089-AC3F-ECDB81ADDE14}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>manucapture_image_lib</RootNamespace>
     <AssemblyName>manucapture-image-lib</AssemblyName>
@@ -99,6 +99,9 @@
     <Reference Include="AForge.Vision">
       <HintPath>..\..\..\..\library\AForge.NET Framework-2.2.5-(libs only)\Release\AForge.Vision.dll</HintPath>
     </Reference>
+    <Reference Include="CsPotrace">
+      <HintPath>..\..\..\..\library\CsPotrace.dll</HintPath>
+    </Reference>
     <Reference Include="IPPrototyper">
       <HintPath>..\..\..\..\library\AForge.NET Framework-2.2.5-(libs only)\Release\IPPrototyper.exe</HintPath>
     </Reference>
@@ -122,6 +125,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tools\Canny.cs" />
+    <Compile Include="tools\CsPotrace.cs" />
+    <Compile Include="tools\CsPtoraceExport.cs" />
     <Compile Include="tools\Helper.cs" />
     <Compile Include="tools\ShapeDetector.cs" />
     <Compile Include="tools\Utils.cs" />
